--- a/public/app/directives/card/card.html
+++ b/public/app/directives/card/card.html
@@ -1,1 +1,1 @@
-<img class="card" ng-src="images/cards/{{image}}">
+<img class="card" ng-src="images/cards/{{image}}" style="left:{{index * 25 + 8}}px; bottom:{{index * 25 + 5}}px;">
