--- a/public/app/directives/card/card.html
+++ b/public/app/directives/card/card.html
@@ -1,1 +1,3 @@
-<img class="card" ng-src="images/cards/{{image}}" style="left:{{index * 25 + 8}}px; bottom:{{index * 25 + 5}}px;">
+<img class="card"
+     ng-src="images/cards/{{image}}"
+     style="left:{{index * 25 + 8}}px; bottom:{{index * 25 + 5}}px;z-index:{{index * 100}}">
