Add player count to dialogs

--- a/public/app/modals/host.html
+++ b/public/app/modals/host.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
     Host
     {{roomId}}
-    {{playerCount}}
+    {{Blackjack.playerCount}}
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="start()">Start Game</button>
