--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,14 @@
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/angularjs-toaster/toaster.min.css">
     <link rel="stylesheet" href="stylesheets/style.css">
 
     <script src="/socket.io/socket.io.js"></script>
 
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="bower_components/angularjs-toaster/toaster.min.js"></script>
     <script src="bower_components/angular-socket-io/socket.min.js"></script>
     <script src="bower_components/lodash/lodash.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -49,7 +51,9 @@
                              ng-class="{'current-player-number': Blackjack.currentPlayerIndex == $index, 'other-player-number': Blackjack.currentPlayerIndex != $index}">
                             {{$index}}
                         </div>
-                        <div class="text-center" ng-if="$index == Blackjack.currentPlayerIndex">
+                        <div class="text-center"
+                             ng-if="$index == Blackjack.currentPlayerIndex"
+                             ng-show="Blackjack.turn == $index">
                             <a class="btn btn-lg btn-info" ng-click="Blackjack.hit()">Hit</a>
                             <a class="btn btn-lg btn-danger" ng-click="Blackjack.stand()">Stand</a>
                         </div>
@@ -58,6 +62,8 @@
             </div>
         </div>
     </div>
+
+    <toaster-container></toaster-container>
 
     <script src="app/main.js"></script>
     <script src="app/main.controller.js"></script>
