--- a/public/app/modals/host.html
+++ b/public/app/modals/host.html
@@ -1,10 +1,12 @@
 <div class="modal-header">
     <h3 class="modal-title">Host Game</h3>
 </div>
-<div class="modal-body">
-    Host
-    {{roomId}}
-    {{Blackjack.playerCount}}
+<div class="modal-body text-center">
+    Send this ID to your friends to play together:
+
+    <h2>{{roomId}}</h2>
+
+    Number of players currently in room: {{Blackjack.playerCount}}
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="start()">Start Game</button>
