--- a/public/app/modals/join.html
+++ b/public/app/modals/join.html
@@ -1,14 +1,18 @@
 <div class="modal-header">
     <h3 class="modal-title">Join Game</h3>
 </div>
-<div class="modal-body">
+<div class="modal-body text-center">
     <div ng-hide="joined" class="form-group">
-        <label>Join room</label>
+        <h3>Enter the room ID:</h3>
         <input type="form-control" type="number" ng-model="roomId">
         {{message}}
     </div>
     <div ng-show="joined">
-        {{Blackjack.playerCount}}
+        <h3>You have joined successfully!</h3>
+        <h4>Waiting for the host to start the game.</h4>
+        <h1><i class="fa fa-spinner fa-spin"></i></h1>
+
+        Number of players currently in room: {{Blackjack.playerCount}}
     </div>
 </div>
 <div ng-hide="joined" class="modal-footer">
