--- a/public/app/modals/start.html
+++ b/public/app/modals/start.html
@@ -2,6 +2,6 @@
     <h3 class="modal-title">Blackjack</h3>
 </div>
 <div class="modal-body">
-    <button class="btn btn-primary" ng-click="host()">Host game</button>
-    <button class="btn btn-info" ng-click="join()">Join game</button>
+    <button class="btn btn-lg btn-primary" ng-click="host()">Host game</button>
+    <button class="btn btn-lg btn-info" ng-click="join()">Join game</button>
 </div>
