--- a/public/app/modals/start.html
+++ b/public/app/modals/start.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
     <h3 class="modal-title">Blackjack</h3>
 </div>
-<div class="modal-body">
+<div class="modal-body text-center">
     <button class="btn btn-lg btn-primary" ng-click="host()">Host game</button>
     <button class="btn btn-lg btn-info" ng-click="join()">Join game</button>
 </div>
